# C-Strings

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  run.sh
include/: str.h
src/: lib.c
tests/: CMakeLists.txt  add_test.sh  finds.c  get.c  ins.c  ins_cstr.c  ins_str.c  new.c  push.c  push_cstr.c  push_str.c  pushf.c  rep.c  split.c  subs.c
